# glm-ocr-example-eval

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: policy.yaml
config/rules/: GLM-4.5V_Pages_1_2_3.yaml  code.yaml  handwritten.yaml  page.yaml  paper.yaml
docs/scoring_quality_eval/: README.md  consolidated.md  evaluation_1.md  evaluation_2.md
docs/scoring_quality_eval/snapshots/: 2026-03-17.md
src/example_eval/: __init__.py  cli.py  errors.py  evaluator.py  json_metrics.py  markdown_ir.py  policy.py  report.py  rules.py  text_metrics.py  types.py
tests/: test_golden_adjudication.py  test_hardening.py  test_rules.py  test_semantic_fidelity.py  test_tables.py
